<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/todolist_bt_scroll_up"
        style="@style/FabScrollUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/todolist_bt_add"
        style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/content_description_bt_add"
        android:src="@drawable/ic_add_white"
        app:backgroundTint="@color/fab_options" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todolist_rv_tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1"
        tools:listitem="@layout/model_task">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/todolist_rv_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycler_view_task_empty"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/todolist_rv_band_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycler_view_empty_band"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>