...
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:checkable="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_todolist"
        android:icon="@drawable/ic_todolist"
        android:checkable="true"
        android:title="@string/title_todolist" />

    <item
        android:id="@+id/navigation_personal_notes"
...
